# ChinchillasShowSite

./: .gitignore  Cargo.toml  README.md  Rocket.toml  index.php  make_exe.sh  make_linux.sh  make_linux_rpi.sh  show_info.toml
public_html/css/: main.css
src/: main.rs
src/config/: mod.rs
template/: index.html  main.html
