[package]
name = "chinchillas_show_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
toml = {version = "0.4.2"}
serde_derive = "1.0"
chrono = "0.4"